name:                tut
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/przembot/tut#readme
license:             BSD3
license-file:        LICENSE
author:              Przemyslaw Kopanski
maintainer:          prz.kopanski@gmail.com
copyright:           (c) 2015 Przemyslaw Kopanski
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tut
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , either
                     , text
